--- a/.github/workflows/ssl_status.yml
+++ b/.github/workflows/ssl_status.yml
@@ -4,19 +4,22 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "*/2 * * * *"
-
+  workflow_run:
+    workflows: ["SSL Expiry Status"]
+    types:
+      - completed
 jobs:
   check_ssl_expiry:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install
