SSL Expiry Commit Changes

--- a/.github/workflows/ssl_status.yml
+++ b/.github/workflows/ssl_status.yml
@@ -8,7 +8,9 @@ on:
 jobs:
   check_ssl_expiry:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory:/home/ec2-user/sslcheck_workflow/domains_txt 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
