--- a/.github/workflows/ssl_status.yml
+++ b/.github/workflows/ssl_status.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Run SSL check script
         run: |
           chmod +x ssl_check.sh
-          ./"ssl_check.sh"
+          ./ssl_check.sh
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
