Latest Commit change made to check SSL expiry status

--- a/.github/workflows/ssl_status.yml
+++ b/.github/workflows/ssl_status.yml
@@ -1,8 +1,8 @@
 ---
 name: SSL Expiry Status
 on:
- schedule:
-    - cron: "0 0 * * *"
+  schedule:
+    - cron: 0 0 * * *
 jobs:
   check_ssl_expiry:
     runs-on: ubuntu-latest
