--- a/.github/workflows/ssl_status.yml
+++ b/.github/workflows/ssl_status.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: 3.9
       - name: Navigate to Script Directory
-        run: cd /home/ec2-user/sslcheck_workflow
+        run:  sslcheck_workflow/ssl_check.py
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
