--- a/.github/workflows/ssl_status.yml
+++ b/.github/workflows/ssl_status.yml
@@ -1,25 +1,29 @@
----
 name: SSL Expiry Check
+
 on:
   workflow_dispatch: null
   schedule:
-    - cron: 0/5 * * * *
+    - cron: '0/5 * * * *'
+
 jobs:
   check_ssl_expiry:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: 3.9
-      - name: Navigate to Script Directory
-        run:  cd sslcheck_workflow/ssl_check.py
+
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests pytz
+
       - name: SSL Expiry Check
         run: |
-          python ssl_check.py
+          python /home/ec2-user/sslcheck_workflow/ssl_check.py
+
