--- a/.github/workflows/ssl_status.yml
+++ b/.github/workflows/ssl_status.yml
@@ -1,28 +1,19 @@
-name: SSL Expiry Check
-
+name: SSL Expiry Status
 on:
-  workflow_dispatch: null
-
-
+  schedule:
+    - cron: 0 0 * * *
 jobs:
   check_ssl_expiry:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.9
-
-      - name: Install Dependencies
+      - name: Set up Bash
+        shell: bash
+      - name: Run SSL check script
         run: |
-          python -m pip install --upgrade pip
-          pip install requests pytz
-
-      - name: SSL Expiry Check
-        run: |
-          python /home/ec2-user/sslcheck_workflow/ssl_check.py
-
+          ls -l
+          chmod +x ssl_check.sh
+          ./ssl_check.sh
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
