Latest Commit Changes Made in Yaml file

--- a/.github/workflows/ssl_status.yml
+++ b/.github/workflows/ssl_status.yml
@@ -1,16 +1,20 @@
 name: SSL Expiry Status
+
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 0 * * *
+    - cron: "0 0 * * *"
+
 jobs:
   check_ssl_expiry:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        
       - name: Set up Bash
         shell: bash
+        
       - name: Run SSL check script
         run: |
           ls -l
@@ -18,3 +22,4 @@ jobs:
           ./ssl_check.sh
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
